# TUI_Form_Designer

./: .gitignore  .pre-commit-config.yaml  ANTI_PATTERN_ANALYSIS.md  ARCHITECTURE.md  BACKLOG.md  BUILD_DEPLOY_WORKFLOW.md  CHANGELOG.md  CODE_QUALITY_AUDIT.md  CRITICAL-SIGNAL-HANDLING-ISSUE.md  LICENSE  MIGRATION_v2.0.0.md  PHASE3_ANALYSIS.md  README-editor.md  README-engine.md  README.md  RELEASE_v1.1.0.md  RELEASE_v2.0.0.md  build.sh  pyproject-editor.toml  pyproject-engine.toml  pyproject.toml  test_fixes.py  test_tui_issues.py
.github/workflows/: build-and-release.yml
docs/: CONDITIONAL_HANDLING_DESIGN.md  FIELD_REFERENCE.md  FLOW_ID_TO_LAYOUT_ID_RENAME.md  PRODUCTION_VALIDATION.md  README.md  REFACTORING_GUIDELINES.md  REFACTORING_PLAN.md  TUI_RENAME_SUMMARY.md  TUI_VALIDATOR_COMPLETE_STATUS.md  TUI_VALIDATOR_V2.2_SUMMARY.md  VALIDATOR_NO_BACKWARD_COMPATIBILITY.md  VALIDATOR_OVERHAUL_SUMMARY.md  VALIDATOR_QUICK_REFERENCE.md  VALIDATOR_V2.2_ENHANCEMENTS.md  VIRTUAL_LAYOUT_DESIGN.md  WORKFLOW_ARCHITECTURE_DESIGN.md
documents/: CONDITIONAL_HANDLING_DESIGN.md  MODULAR_DEFAULTS_DESIGN.md  VIRTUAL_LAYOUT_DESIGN.md
flows/: app_setup.yml  simple_survey.yml  user_registration.yml
flows/advanced/: application_setup.yml  docker_deployment.yml
flows/basic/: simple_survey.yml  user_registration.yml
flows/templates/: openproject_main_config.yml
src/tui_form_designer/: __init__.py
src/tui_form_designer/core/: __init__.py  exceptions.py  flow_engine.py
src/tui_form_designer/examples/: __init__.py
src/tui_form_designer/preprocessing/: __init__.py  defaults_preprocessor.py  layout_preprocessor.py
src/tui_form_designer/tools/: __init__.py  cli.py  demo.py  designer.py  preview.py  tester.py  validator.py
src/tui_form_designer/ui/: __init__.py  questionary_ui.py
src/tui_form_editor/: __init__.py
src/tui_form_editor/tools/: __init__.py  cli.py  demo.py  designer.py  preview.py  tester.py  validator.py
src/tui_form_engine/: __init__.py  renderer.py
src/tui_form_engine/core/: exceptions.py  flow_engine.py  form_executor.py
src/tui_form_engine/preprocessing/: __init__.py  defaults_preprocessor.py  layout_preprocessor.py
src/tui_form_engine/ui/: questionary_ui.py
tests/: conftest.py  test_cli_tools.py  test_flow_engine.py  test_integration.py  test_questionary_ui.py  test_signal_handling.py
tui_layouts/advanced/: application_setup.yml  docker_deployment.yml
tui_layouts/basic/: simple_survey.yml  user_registration.yml
tui_layouts/templates/: openproject_main_config.yml
